--- a/openApiDocs/beta/Identity.DirectoryManagement.yml
+++ b/openApiDocs/beta/Identity.DirectoryManagement.yml
@@ -27938,11 +27938,7 @@ paths:
     get:
       tags:
         - organization.organizationSettings
-      summary: List pronounsSettings
-      description: 'Get the properties of the pronounsSettings resource for an organization.  For more information on settings to manage pronouns support, see Manage pronouns settings for an organization using the Microsoft Graph API.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/organizationsettings-list-pronounssettings?view=graph-rest-1.0
+      summary: Get pronouns from organization
       operationId: organization.setting_GetPronoun
       parameters:
         - name: organization-id
@@ -27991,11 +27987,7 @@ paths:
     patch:
       tags:
         - organization.organizationSettings
-      summary: Update pronounsSettings
-      description: 'Update the properties of a pronounsSettings in an organization. For more information on settings to manage pronouns support, see Manage pronouns settings for an organization using the Microsoft Graph API.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/pronounssettings-update?view=graph-rest-1.0
+      summary: Update the navigation property pronouns in organization
       operationId: organization.setting_UpdatePronoun
       parameters:
         - name: organization-id
@@ -36787,11 +36779,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. Note that this might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: Unique identifier for the identity.
           nullable: true
       additionalProperties:
         type: object
@@ -36838,11 +36830,11 @@ components:
       properties:
         key:
           type: string
-          description: Key.
+          description: Contains the name of the field that a value is associated with.
           nullable: true
         value:
           type: string
-          description: Value.
+          description: Contains the corresponding value for the specified key.
           nullable: true
       additionalProperties:
         type: object
@@ -38846,6 +38838,8 @@ components:
               type: string
               description: Identifier of the synchronization template this job is based on.
               nullable: true
+            bulkUpload:
+              $ref: '#/components/schemas/microsoft.graph.bulkUpload'
             schema:
               $ref: '#/components/schemas/microsoft.graph.synchronizationSchema'
           additionalProperties:
@@ -46360,6 +46354,13 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.bulkUpload:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: bulkUpload
+          type: object
+          additionalProperties:
+            type: object
     microsoft.graph.synchronizationSchema:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
