--- a/openApiDocs/v1.0/Files.yml
+++ b/openApiDocs/v1.0/Files.yml
@@ -7894,6 +7894,35 @@ paths:
       x-ms-pageable:
         nextLinkName: '@odata.nextLink'
         operationName: listMore
+  '/drives/{drive-id}/items/{driveItem-id}/microsoft.graph.permanentDelete':
+    post:
+      tags:
+        - drives.Actions
+      summary: Invoke action permanentDelete
+      operationId: drive.item_permanentDelete
+      parameters:
+        - name: drive-id
+          in: path
+          description: The unique identifier of drive
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: drive
+        - name: driveItem-id
+          in: path
+          description: The unique identifier of driveItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: driveItem
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   '/drives/{drive-id}/items/{driveItem-id}/microsoft.graph.preview':
     post:
       tags:
@@ -23059,6 +23088,27 @@ paths:
       x-ms-pageable:
         nextLinkName: '@odata.nextLink'
         operationName: listMore
+  '/drives/{drive-id}/root/microsoft.graph.permanentDelete':
+    post:
+      tags:
+        - drives.Actions
+      summary: Invoke action permanentDelete
+      operationId: drive.root_permanentDelete
+      parameters:
+        - name: drive-id
+          in: path
+          description: The unique identifier of drive
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: drive
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   '/drives/{drive-id}/root/microsoft.graph.preview':
     post:
       tags:
