--- a/openApiDocs/beta/Education.yml
+++ b/openApiDocs/beta/Education.yml
@@ -12400,11 +12400,11 @@ paths:
     patch:
       tags:
         - education.educationUser
-      summary: Update relatedContacts
-      description: Update the relatedContact collection of an educationUser object.
+      summary: Update educationUser properties
+      description: Update the properties of an **educationuser** object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/relatedcontact-update?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/educationuser-update?view=graph-rest-1.0
       operationId: education_UpdateUser
       parameters:
         - name: educationUser-id
